Mandatory donezo I think

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,3 +1,4 @@
+MYSQL_LOCALHOST=mariadb_con
 MYSQL_ROOT_PASSWORD=root_password
 MYSQL_DATABASE=wordpress
 MYSQL_USER=YoupiBanane
@@ -5,3 +6,5 @@ MYSQL_PASSWORD=password
 
 MYSQL_ADMIN=leu-lee
 MYSQL_ADMIN_PASSWORD=admin_password
+
+
