--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -2,14 +2,25 @@
 
 server {
 	listen          443 ssl;
-	server_name     localhost;
-	root			/usr/share/nginx/html;
-	# root			YoupiBanane;
-	index			index.html;
+	server_name     localhost leu-lee@login.42.fr;
+	root			/var/www/html/wordpress/;
+	index			index.php;
 
 	ssl_certificate /etc/ssl/certs/localhost.crt;
-    ssl_certificate_key /etc/ssl/private/localhost.key;
+  ssl_certificate_key /etc/ssl/private/localhost.key;
 
 	ssl_protocols TLSv1.2 TLSv1.3;
+
+  location ~ \.php$ {
+              try_files $uri =404;
+              fastcgi_split_path_info ^(.+\.php)(/.+)$;
+              # fastcgi_split_path_info ^(.+?\.php)(/.*)$;
+
+              fastcgi_pass wordpress_con:9000;
+              fastcgi_index index.php;
+              include /etc/nginx/fastcgi_params;
+              fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+              fastcgi_param PATH_INFO $fastcgi_path_info;
+      }
 
 }
